apps/frontend-angular/src/styles.css
/* You can add global styles to this file, and also import other style files */
@import '@angular/material/prebuilt-themes/deeppurple-amber.css';

.container {
    display: flex;
    gap: 3rem;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
  }

  .cards {
    display: flex;
    gap: 10px;
  }

  .card-container {
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
    margin: 10px;
    padding: 5%;
    width: 45%;
  }

  .content {
    display: flex;
  }

  .btn {
    display: flex;
    gap: 1.2rem;
    margin: 20px;
  }

  .button {
    font-weight: bold;
    color: beige;
    border: none;
    border-radius: 5px;
    padding: 15px;
    width: max-content;
    cursor: pointer;
  }

  .delete-button {
    background-color: rgb(219, 32, 32);
  }

  .view-button {
    background-color: rgb(6, 132, 141);
    padding: 10px;
  }

  .edit-button {
    background-color: rgb(53, 126, 4);
  }

  .add-button {
    background-color: rgb(53, 126, 4);
  }

  .back-button {
    background-color: #292929;
    position: absolute;
    top: 50px;
    left: 50px;
  }

  .form {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
  }

  .error-message {
    color: red;
    font-size: 15px;
  }

  .input {
    padding: 10px;
    font-size: 12px;
    margin-bottom: 20px;
  }

  .textarea {
    padding: 15px;
  }

  .select {
    padding: 6px;
    margin-top: 15px;
  }

  .date {
    font-size: 20px;
    margin: 10px;
  }

  .description {
    font-size: 20px;
    font-style: italic;
    color: #222121;
    margin-top: 12px;
  }

  .order {
    font-weight: bold;
    color: #646464;
    margin-top: 12px;
  }

  @media only screen and (max-width: 600px) {
   .cards {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: scroll;
     } 

  .back-button {
    position: absolute;
    top: 0;
    left: 0;
  }
  }

